--- a/dlnd_tv_script_generation.html
+++ b/dlnd_tv_script_generation.html
@@ -12091,7 +12091,13 @@ Barney_Gumble: Yeah, you should only drink to enhance your social skills.
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>TensorFlow Version: 1.0.0
-Default GPU Device: /gpu:0
+</pre>
+</div>
+</div>
+
+<div class="output_area"><div class="prompt"></div>
+<div class="output_subarea output_stream output_stderr output_text">
+<pre>/Users/seth.bunke/anaconda/envs/dlnd/lib/python3.6/site-packages/ipykernel/__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.
 </pre>
 </div>
 </div>
@@ -12128,7 +12134,7 @@ Default GPU Device: /gpu:0
 <span class="sd">    &quot;&quot;&quot;</span>    
     <span class="n">inputs</span> <span class="o">=</span> <span class="n">tf</span><span class="o">.</span><span class="n">placeholder</span><span class="p">(</span><span class="n">tf</span><span class="o">.</span><span class="n">int32</span><span class="p">,</span> <span class="p">[</span><span class="kc">None</span><span class="p">,</span> <span class="kc">None</span><span class="p">],</span> <span class="n">name</span><span class="o">=</span><span class="s1">&#39;input&#39;</span><span class="p">)</span>
     <span class="n">targets</span> <span class="o">=</span> <span class="n">tf</span><span class="o">.</span><span class="n">placeholder</span><span class="p">(</span><span class="n">tf</span><span class="o">.</span><span class="n">int32</span><span class="p">,</span> <span class="p">[</span><span class="kc">None</span><span class="p">,</span> <span class="kc">None</span><span class="p">],</span> <span class="n">name</span><span class="o">=</span><span class="s1">&#39;target&#39;</span><span class="p">)</span>
-    <span class="n">learning_rate</span> <span class="o">=</span> <span class="n">tf</span><span class="o">.</span><span class="n">placeholder</span><span class="p">(</span><span class="n">tf</span><span class="o">.</span><span class="n">int32</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s1">&#39;learning_rate&#39;</span><span class="p">)</span>
+    <span class="n">learning_rate</span> <span class="o">=</span> <span class="n">tf</span><span class="o">.</span><span class="n">placeholder</span><span class="p">(</span><span class="n">tf</span><span class="o">.</span><span class="n">float32</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="s1">&#39;learning_rate&#39;</span><span class="p">)</span>
     <span class="k">return</span> <span class="p">(</span><span class="n">inputs</span><span class="p">,</span> <span class="n">targets</span><span class="p">,</span> <span class="n">learning_rate</span><span class="p">)</span>
 
 
@@ -12520,7 +12526,7 @@ Default GPU Device: /gpu:0
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[14]:</div>
+<div class="prompt input_prompt">In&nbsp;[22]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Number of Epochs</span>
@@ -12528,7 +12534,7 @@ Default GPU Device: /gpu:0
 <span class="c1"># Batch Size</span>
 <span class="n">batch_size</span> <span class="o">=</span> <span class="mi">256</span> <span class="c1">#None</span>
 <span class="c1"># RNN Size</span>
-<span class="n">rnn_size</span> <span class="o">=</span> <span class="mi">1024</span> <span class="c1">#None</span>
+<span class="n">rnn_size</span> <span class="o">=</span> <span class="mi">512</span> <span class="c1">#None</span>
 <span class="c1"># Sequence Length</span>
 <span class="n">seq_length</span> <span class="o">=</span> <span class="mi">15</span> <span class="c1">#None</span>
 <span class="c1"># Learning Rate</span>
@@ -12559,7 +12565,7 @@ Default GPU Device: /gpu:0
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[15]:</div>
+<div class="prompt input_prompt">In&nbsp;[23]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12610,7 +12616,7 @@ Default GPU Device: /gpu:0
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[16]:</div>
+<div class="prompt input_prompt">In&nbsp;[24]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12657,90 +12663,90 @@ Default GPU Device: /gpu:0
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Epoch   0 Batch    0/17   train_loss = 8.822
-Epoch   1 Batch    3/17   train_loss = 8.822
-Epoch   2 Batch    6/17   train_loss = 8.822
-Epoch   3 Batch    9/17   train_loss = 8.821
-Epoch   4 Batch   12/17   train_loss = 8.821
-Epoch   5 Batch   15/17   train_loss = 8.822
-Epoch   7 Batch    1/17   train_loss = 8.821
-Epoch   8 Batch    4/17   train_loss = 8.821
-Epoch   9 Batch    7/17   train_loss = 8.822
-Epoch  10 Batch   10/17   train_loss = 8.821
-Epoch  11 Batch   13/17   train_loss = 8.822
-Epoch  12 Batch   16/17   train_loss = 8.822
-Epoch  14 Batch    2/17   train_loss = 8.822
-Epoch  15 Batch    5/17   train_loss = 8.822
-Epoch  16 Batch    8/17   train_loss = 8.821
-Epoch  17 Batch   11/17   train_loss = 8.822
-Epoch  18 Batch   14/17   train_loss = 8.821
-Epoch  20 Batch    0/17   train_loss = 8.822
-Epoch  21 Batch    3/17   train_loss = 8.822
-Epoch  22 Batch    6/17   train_loss = 8.822
-Epoch  23 Batch    9/17   train_loss = 8.821
-Epoch  24 Batch   12/17   train_loss = 8.821
-Epoch  25 Batch   15/17   train_loss = 8.822
-Epoch  27 Batch    1/17   train_loss = 8.821
-Epoch  28 Batch    4/17   train_loss = 8.821
-Epoch  29 Batch    7/17   train_loss = 8.821
-Epoch  30 Batch   10/17   train_loss = 8.821
-Epoch  31 Batch   13/17   train_loss = 8.822
-Epoch  32 Batch   16/17   train_loss = 8.822
-Epoch  34 Batch    2/17   train_loss = 8.822
-Epoch  35 Batch    5/17   train_loss = 8.822
-Epoch  36 Batch    8/17   train_loss = 8.822
-Epoch  37 Batch   11/17   train_loss = 8.822
-Epoch  38 Batch   14/17   train_loss = 8.821
-Epoch  40 Batch    0/17   train_loss = 8.822
-Epoch  41 Batch    3/17   train_loss = 8.822
-Epoch  42 Batch    6/17   train_loss = 8.822
-Epoch  43 Batch    9/17   train_loss = 8.821
-Epoch  44 Batch   12/17   train_loss = 8.821
-Epoch  45 Batch   15/17   train_loss = 8.822
-Epoch  47 Batch    1/17   train_loss = 8.822
-Epoch  48 Batch    4/17   train_loss = 8.821
-Epoch  49 Batch    7/17   train_loss = 8.822
-Epoch  50 Batch   10/17   train_loss = 8.821
-Epoch  51 Batch   13/17   train_loss = 8.822
-Epoch  52 Batch   16/17   train_loss = 8.822
-Epoch  54 Batch    2/17   train_loss = 8.821
-Epoch  55 Batch    5/17   train_loss = 8.822
-Epoch  56 Batch    8/17   train_loss = 8.821
-Epoch  57 Batch   11/17   train_loss = 8.822
-Epoch  58 Batch   14/17   train_loss = 8.821
-Epoch  60 Batch    0/17   train_loss = 8.821
-Epoch  61 Batch    3/17   train_loss = 8.822
-Epoch  62 Batch    6/17   train_loss = 8.822
-Epoch  63 Batch    9/17   train_loss = 8.821
-Epoch  64 Batch   12/17   train_loss = 8.821
-Epoch  65 Batch   15/17   train_loss = 8.822
-Epoch  67 Batch    1/17   train_loss = 8.821
-Epoch  68 Batch    4/17   train_loss = 8.821
-Epoch  69 Batch    7/17   train_loss = 8.821
-Epoch  70 Batch   10/17   train_loss = 8.821
-Epoch  71 Batch   13/17   train_loss = 8.822
-Epoch  72 Batch   16/17   train_loss = 8.822
-Epoch  74 Batch    2/17   train_loss = 8.821
-Epoch  75 Batch    5/17   train_loss = 8.822
-Epoch  76 Batch    8/17   train_loss = 8.821
-Epoch  77 Batch   11/17   train_loss = 8.822
-Epoch  78 Batch   14/17   train_loss = 8.821
-Epoch  80 Batch    0/17   train_loss = 8.821
-Epoch  81 Batch    3/17   train_loss = 8.822
-Epoch  82 Batch    6/17   train_loss = 8.822
-Epoch  83 Batch    9/17   train_loss = 8.821
-Epoch  84 Batch   12/17   train_loss = 8.821
-Epoch  85 Batch   15/17   train_loss = 8.822
-Epoch  87 Batch    1/17   train_loss = 8.821
-Epoch  88 Batch    4/17   train_loss = 8.821
-Epoch  89 Batch    7/17   train_loss = 8.822
-Epoch  90 Batch   10/17   train_loss = 8.821
-Epoch  91 Batch   13/17   train_loss = 8.822
-Epoch  92 Batch   16/17   train_loss = 8.822
-Epoch  94 Batch    2/17   train_loss = 8.822
-Epoch  95 Batch    5/17   train_loss = 8.822
-Epoch  96 Batch    8/17   train_loss = 8.821
-Epoch  97 Batch   11/17   train_loss = 8.822
-Epoch  98 Batch   14/17   train_loss = 8.821
+Epoch   1 Batch    3/17   train_loss = 6.018
+Epoch   2 Batch    6/17   train_loss = 5.315
+Epoch   3 Batch    9/17   train_loss = 4.978
+Epoch   4 Batch   12/17   train_loss = 4.618
+Epoch   5 Batch   15/17   train_loss = 4.453
+Epoch   7 Batch    1/17   train_loss = 4.213
+Epoch   8 Batch    4/17   train_loss = 4.137
+Epoch   9 Batch    7/17   train_loss = 3.949
+Epoch  10 Batch   10/17   train_loss = 3.717
+Epoch  11 Batch   13/17   train_loss = 3.511
+Epoch  12 Batch   16/17   train_loss = 3.350
+Epoch  14 Batch    2/17   train_loss = 3.254
+Epoch  15 Batch    5/17   train_loss = 3.095
+Epoch  16 Batch    8/17   train_loss = 2.909
+Epoch  17 Batch   11/17   train_loss = 2.619
+Epoch  18 Batch   14/17   train_loss = 2.546
+Epoch  20 Batch    0/17   train_loss = 2.349
+Epoch  21 Batch    3/17   train_loss = 2.283
+Epoch  22 Batch    6/17   train_loss = 2.130
+Epoch  23 Batch    9/17   train_loss = 2.016
+Epoch  24 Batch   12/17   train_loss = 1.922
+Epoch  25 Batch   15/17   train_loss = 1.865
+Epoch  27 Batch    1/17   train_loss = 1.853
+Epoch  28 Batch    4/17   train_loss = 1.677
+Epoch  29 Batch    7/17   train_loss = 1.587
+Epoch  30 Batch   10/17   train_loss = 1.465
+Epoch  31 Batch   13/17   train_loss = 1.359
+Epoch  32 Batch   16/17   train_loss = 1.341
+Epoch  34 Batch    2/17   train_loss = 1.321
+Epoch  35 Batch    5/17   train_loss = 1.258
+Epoch  36 Batch    8/17   train_loss = 1.202
+Epoch  37 Batch   11/17   train_loss = 1.155
+Epoch  38 Batch   14/17   train_loss = 1.170
+Epoch  40 Batch    0/17   train_loss = 1.075
+Epoch  41 Batch    3/17   train_loss = 1.061
+Epoch  42 Batch    6/17   train_loss = 1.026
+Epoch  43 Batch    9/17   train_loss = 0.994
+Epoch  44 Batch   12/17   train_loss = 0.985
+Epoch  45 Batch   15/17   train_loss = 0.990
+Epoch  47 Batch    1/17   train_loss = 1.027
+Epoch  48 Batch    4/17   train_loss = 0.947
+Epoch  49 Batch    7/17   train_loss = 0.899
+Epoch  50 Batch   10/17   train_loss = 0.901
+Epoch  51 Batch   13/17   train_loss = 0.834
+Epoch  52 Batch   16/17   train_loss = 0.831
+Epoch  54 Batch    2/17   train_loss = 0.831
+Epoch  55 Batch    5/17   train_loss = 0.809
+Epoch  56 Batch    8/17   train_loss = 0.822
+Epoch  57 Batch   11/17   train_loss = 0.812
+Epoch  58 Batch   14/17   train_loss = 0.837
+Epoch  60 Batch    0/17   train_loss = 0.779
+Epoch  61 Batch    3/17   train_loss = 0.765
+Epoch  62 Batch    6/17   train_loss = 0.759
+Epoch  63 Batch    9/17   train_loss = 0.689
+Epoch  64 Batch   12/17   train_loss = 0.748
+Epoch  65 Batch   15/17   train_loss = 0.725
+Epoch  67 Batch    1/17   train_loss = 0.755
+Epoch  68 Batch    4/17   train_loss = 0.695
+Epoch  69 Batch    7/17   train_loss = 0.715
+Epoch  70 Batch   10/17   train_loss = 0.703
+Epoch  71 Batch   13/17   train_loss = 0.656
+Epoch  72 Batch   16/17   train_loss = 0.682
+Epoch  74 Batch    2/17   train_loss = 0.663
+Epoch  75 Batch    5/17   train_loss = 0.662
+Epoch  76 Batch    8/17   train_loss = 0.648
+Epoch  77 Batch   11/17   train_loss = 0.689
+Epoch  78 Batch   14/17   train_loss = 0.692
+Epoch  80 Batch    0/17   train_loss = 0.651
+Epoch  81 Batch    3/17   train_loss = 0.664
+Epoch  82 Batch    6/17   train_loss = 0.676
+Epoch  83 Batch    9/17   train_loss = 0.633
+Epoch  84 Batch   12/17   train_loss = 0.659
+Epoch  85 Batch   15/17   train_loss = 0.668
+Epoch  87 Batch    1/17   train_loss = 0.702
+Epoch  88 Batch    4/17   train_loss = 0.667
+Epoch  89 Batch    7/17   train_loss = 0.671
+Epoch  90 Batch   10/17   train_loss = 0.661
+Epoch  91 Batch   13/17   train_loss = 0.646
+Epoch  92 Batch   16/17   train_loss = 0.691
+Epoch  94 Batch    2/17   train_loss = 0.646
+Epoch  95 Batch    5/17   train_loss = 0.662
+Epoch  96 Batch    8/17   train_loss = 0.661
+Epoch  97 Batch   11/17   train_loss = 0.643
+Epoch  98 Batch   14/17   train_loss = 0.705
 Model Trained and Saved
 </pre>
 </div>
@@ -12762,7 +12768,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="prompt input_prompt">In&nbsp;[25]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12788,7 +12794,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[18]:</div>
+<div class="prompt input_prompt">In&nbsp;[26]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12827,7 +12833,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[19]:</div>
+<div class="prompt input_prompt">In&nbsp;[27]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">get_tensors</span><span class="p">(</span><span class="n">loaded_graph</span><span class="p">):</span>
@@ -12880,7 +12886,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[20]:</div>
+<div class="prompt input_prompt">In&nbsp;[28]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">pick_word</span><span class="p">(</span><span class="n">probabilities</span><span class="p">,</span> <span class="n">int_to_vocab</span><span class="p">):</span>
@@ -12930,7 +12936,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[21]:</div>
+<div class="prompt input_prompt">In&nbsp;[29]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">gen_length</span> <span class="o">=</span> <span class="mi">200</span>
@@ -12989,7 +12995,19 @@ Model Trained and Saved
 
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>moe_szyslak: executive caholic rub ball&#39;s rasputin&#39;s undated unison didn&#39;t needy fragile workers must&#39;ve alphabet bites pretentious_rat_lover: excitement cheat figure annual moe-lennium soaps nuked prejudice south feisty snorts cowboys tons part boned bottle backbone neanderthal poorer badges kicks direction fork life-extension modest novel trouble plain wistful mm running ma&#39;am pure want bank aer three-man cow woodchucks mm-hmm steal positive ungrateful watch harv: truck_driver: neat&#39;s-foot weird say kings country rush reactions wistful nominated p-k reopen joint apron morning speaking quickly workin&#39; pockets except dealer getting jebediah ringing linin&#39; waylon_smithers: slugger statue shoe nothin&#39;s lifts effect hiring neighbor&#39;s gangrene picnic risqué strawberry mirror legal sees/ sister rosey moe-heads wiping icelandic pontiff ah-ha stooges corporate where&#39;d film four-star sheriff perfect lovers&#39; handling and/or ehhh later been ointment queer patterns crowds years weak authorized disrobin&#39; lungs dumbbell encouraging stores poking crayon pity holding authorized julep funds going cutie enterprising grammys energy polish automobiles flips snout steel frink admirer meant declan magnanimous celebrities compliments trick agreement loan party supervising chauffeur toxins offense brief twelveball placed mob x sun runners verticality pus-bucket dyin&#39; american confidential hearse rector raccoons snaps arrested: excellent suave charges kahlua yard porn macbeth isotopes grand tha labels wore how&#39;d whaaa workers seymour card mindless
+<pre>moe_szyslak: he seems fine. there is one bright side: i&#39;m also forbidden from watch in the lone can state tonight.(rich and--(uncomfortable sobs)
+homer_simpson: hey, those are my customers-slash-only, a good isn&#39;t?
+homer_simpson: hello, the name&#34; stalking had something special about.
+homer_simpson: now, i&#39;m high-falutin&#39; on the home?
+homer_simpson: moe, this. the other day have a thought military hot face.
+moe_szyslak: come on, guys, ya have to take that. we can get the dead!
+moe_szyslak: here you go-- marge-- shoot this tune of comin&#39;?
+moe_szyslak: eh, this blade bar. the other day you&#39;re talkin&#39; for a south of.
+carl_carlson: uh-oh!
+moe_szyslak:(unfamiliar) handsome) take it! / a chance at things.
+homer_simpson: oh, please, please. we&#39;re here this bar is wrong, but i have to keep written marge on a world of fools years.
+moe_szyslak: well, i&#39;m in too...
+homer_simpson: okay, we&#39;ve got tow dough i&#39;m
 </pre>
 </div>
 </div>
